--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@react-navigation/native": "^5.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
