--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "host": "vite --host"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/lab": "^5.0.0-alpha.158",
+    "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@react-navigation/native": "^5.7.3",
     "react": "^18.2.0",
