--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@mui/lab": "^5.0.0-alpha.158",
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@react-google-maps/api": "^2.19.2",
     "@react-navigation/native": "^5.7.3",
+    "leaflet": "^1.9.4",
+    "nominatim-geocoder": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1"
