--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.2",
     "@mui/lab": "^5.0.0-alpha.158",
-    "@mui/material": "^5.15.2",
+    "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@react-google-maps/api": "^2.19.2",
     "@react-navigation/native": "^5.7.3",
+    "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "nominatim-geocoder": "^0.1.4",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
+    "reactstrap": "^9.2.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
