--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "host": "vite --host"
+    "host": "vite --host",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -20,14 +21,18 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@react-google-maps/api": "^2.19.2",
     "@react-navigation/native": "^5.7.3",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.0.3",
     "nominatim-geocoder": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.21.1",
     "reactstrap": "^9.2.1",
     "styled-components": "^6.1.1"
   },
