--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "luigis_menu",
   "private": true,
   "version": "0.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon back/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -22,11 +23,14 @@
     "@react-google-maps/api": "^2.19.2",
     "@react-navigation/native": "^5.7.3",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "nominatim-geocoder": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +48,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "vite": "^5.0.0"
