--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon back/index.js",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "host": "vite --host",
-    "start": "react-scripts start"
+    "start": "node back/index.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -25,6 +21,7 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -38,7 +35,8 @@
     "react-router": "^6.20.0",
     "react-router-dom": "^6.21.1",
     "reactstrap": "^9.2.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
